<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_saisie_id_spreatsheet"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/defaut_id_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:theme="@style/AppButton.Button"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/default_id"
        app:layout_constraintTop_toBottomOf="@id/user_input"/>

    <Button
        android:id="@+id/call_api_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:theme="@style/AppButton.Button"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/load_bdd"
        app:layout_constraintTop_toBottomOf="@id/defaut_id_button"/>

</android.support.constraint.ConstraintLayout>
