<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/big_follow_welcome"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="miage.fr.gestionprojet.vues.ConnexionActivity"
    tools:showIn="@layout/activity_connexion">

    <RelativeLayout
        android:id="@+id/account_information_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@color/colorPrimaryDark">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/account_profile_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/profilepic"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/account_profile_picture" >

            <TextView
                android:id="@+id/account_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/account_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_below="@+id/userName"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/connected_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:visibility="invisible">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            android:theme="@style/AppButton.Button"
            android:text="@string/sign_out"
            android:layout_weight="1" />

        <Button
            android:id="@+id/go_next_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            android:theme="@style/AppButton.Button"
            android:text="@string/launch_application"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:theme="@style/AppButton.Button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:visibility="visible"/>

</RelativeLayout>
